fix(m11): preserve null diff sides and normalize API state errors